# mandelbrot

./: .gitignore  CMakeLists.txt  Makefile  mandlebrot.C  mandlebrot.H
src/: Common.hpp  ImageWriter.cpp  ImageWriter.hpp  Main.cpp  Main.hpp  MandelbrotGenerator.cpp  MandelbrotGenerator.hpp  ThreadPool.cpp  ThreadPool.hpp
